examples/bad/unknownfunction.hid
/* Program will end with an unknown function error */

declare do_things(declare a){
  a = ^^^a;
  print a;
}

declare a;
do_other_things(a);
